--- a/assests/style.css
+++ b/assests/style.css
@@ -6,6 +6,22 @@
 
  }
 
+ @media (min-width: 395px) {
+
+     .bbb {
+         margin-top: 10px !important;
+     }
+
+ }
+
+ @media (max-width: 395px) {
+
+     .bbb {
+         margin-top: 50px !important;
+     }
+
+ }
+
  .sh {
      box-shadow: none;
      height: 50%;
