--- a/assests/style.css
+++ b/assests/style.css
@@ -1,57 +1,72 @@
- @media (max-width: 540px) {
+* {
+    font-family: 'Mooli', sans-serif;
+    font-family: 'Roboto Slab', serif;
+}
 
-     .bb {
-         margin-top: 8px;
-     }
+@media (max-width: 540px) {
 
- }
+    .bb {
+        margin-top: 8px;
+    }
 
- @media (min-width: 395px) {
+}
 
-     .bbb {
-         margin-top: 10px !important;
-     }
+@media (min-width: 395px) {
 
- }
+    .bbb {
+        margin-top: 10px !important;
+    }
 
- @media (max-width: 395px) {
+}
 
-     .bbb {
-         margin-top: 50px !important;
-     }
+@media (max-width: 395px) {
 
- }
+    .bbb {
+        margin-top: 50px !important;
+    }
 
- .sh {
-     box-shadow: none;
-     height: 50%;
-     box-shadow: 200px -35px lightblue;
- }
+}
 
- .carousel-indicators button {
-     width: 10px !important;
-     height: 10px !important;
-     border-radius: 50%;
-     background-color: #95c7e3 !important;
+.sh {
+    box-shadow: none;
+    height: 50%;
+    box-shadow: 200px -35px lightblue;
+}
 
- }
+.carousel-indicators button {
+    width: 10px !important;
+    height: 10px !important;
+    border-radius: 50%;
+    background-color: #95c7e3 !important;
 
- .xx {
-     background-color: rgb(248, 249, 250) !important;
-     height: 100vh;
- }
+}
 
- .con {
-     background-image: url(./img/Sprinkle.svg);
- }
+.xx {
+    background-color: rgb(248, 249, 250) !important;
+    height: 100vh;
+}
+
+.hover-card:hover {
+    background-color: rgb(230, 229, 229);
+}
+
+ul li :hover {
+    font-size: 18px;
+    font-style: italic;
+    text-shadow: 2px 1px #95c7e3;
+}
+
+.con {
+    background-image: url(./img/Sprinkle.svg);
+}
 
 
- .bg {
-     background-image: url(./img/Rect\ Light.svg);
- }
+.bg {
+    background-image: url(./img/Rect\ Light.svg);
+}
 
- @media (max-width: 770px) {
-     .hero {
-         font-size: small;
-     }
- }
+@media (max-width: 770px) {
+    .hero {
+        font-size: small;
+    }
+}
